# titanoboa-zksync

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  debug_traceCall.json  debug_traceTransaction-True.json  dev-requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: .pre-commit-config.yaml  main.yaml  release.yaml  test.yaml
boa_zksync/: __init__.py  browser.py  compile.py  compiler_utils.py  contract.py  deployer.py  env.py  environment.py  interpret.py  ipython.py  node.py  rpc.py  types.py  util.py  verifiers.py
test/: test_zksync.py
tests/: conftest.py  test_boa_loads.py  test_browser.py  test_computation.py  test_deploy.py  test_deployer.py  test_fork.py  test_get_compiler_output.py  test_sepolia.py  test_zksync.py  test_zksync_fork.py
